foundation/gitops/manual_deploy/dawn/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dawn-ns
  labels:
    name: dawn-ns
    environment: production
